Building the skeleton

--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+		<title> Erik's Skill Distillery Blog </title>
+		<h1> Erik's Skill Distillery Blog </h1>
+	</head>
+	<body>
+	
+		<div class="First">
+			<h3> First Blog Heading </h3>
+				<p> Date</p>
+				<p> Quick Synopsis </p>
+				<p> Intro </p>
+				<p> Body 1 </p>
+				<p> Body 2 </p>
+				<p> Conclusion </p>
+		</div>
+		
+		<div class="Second">
+			<h3> Second Blog Heading </h3>
+				<p> Date</p>
+				<p> Quick Synopsis </p>
+				<p> Intro </p>
+				<p> Body 1 </p>
+				<p> Body 2 </p>
+				<p> Conclusion </p>
+		</div>
+		
+		<div class="Third">
+			<h3> Third Blog Heading </h3>
+				<p> Date</p>
+				<p> Quick Synopsis </p>
+				<p> Intro </p>
+				<p> Body 1 </p>
+				<p> Body 2 </p>
+				<p> Conclusion </p>
+		</div>
+		
+		<div class="Fourth">
+			<h3> Fourth Blog Heading </h3>
+				<p> Date</p>
+				<p> Quick Synopsis </p>
+				<p> Intro </p>
+				<p> Body 1 </p>
+				<p> Body 2 </p>
+				<p> Conclusion </p>
+		</div>
+		
+		<div class="Fifth">
+			<h3> Fifth Blog Heading </h3>
+				<p> Date</p>
+				<p> Quick Synopsis </p>
+				<p> Intro </p>
+				<p> Body 1 </p>
+				<p> Body 2 </p>
+				<p> Conclusion </p>
+		</div>
+	</body>
+</html>
