early updates check

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<body>
 	
 		<div class="First">
-			<h3> First Blog Heading </h3>
-				<p> Date</p>
-				<p> Quick Synopsis </p>
+			<h3> switch <em>vs.</em> if/else </h3>
+				<p> July 29, 2017</p>
+				<p> This blog post will discuss the differences between 'switch' and 'if/else', and when to use each. </p>
 				<p> Intro </p>
 				<p> Body 1 </p>
 				<p> Body 2 </p>
@@ -18,9 +18,9 @@
 		</div>
 		
 		<div class="Second">
-			<h3> Second Blog Heading </h3>
-				<p> Date</p>
-				<p> Quick Synopsis </p>
+			<h3> = <em>vs.</em> == <em>vs.</em> .equals</h3>
+				<p> July 29, 2017</p>
+				<p> This blog post will discuss the differences between '=', '==", and '.equals' and when to use each. </p>
 				<p> Intro </p>
 				<p> Body 1 </p>
 				<p> Body 2 </p>
@@ -28,9 +28,9 @@
 		</div>
 		
 		<div class="Third">
-			<h3> Third Blog Heading </h3>
-				<p> Date</p>
-				<p> Quick Synopsis </p>
+			<h3> import java.util.Scanner; </h3>
+				<p> July 29, 2017</p>
+				<p> This blog post will discuss what happens when your code has 'import java.util.Scanner;', and where does its functionality come from. Plus what is the java portion? </p>
 				<p> Intro </p>
 				<p> Body 1 </p>
 				<p> Body 2 </p>
@@ -38,8 +38,8 @@
 		</div>
 		
 		<div class="Fourth">
-			<h3> Fourth Blog Heading </h3>
-				<p> Date</p>
+			<h3> This blog post will discuss in a method declaration what is void? How is this different from a method with a return type? </h3>
+				<p> July 29, 2017</p>
 				<p> Quick Synopsis </p>
 				<p> Intro </p>
 				<p> Body 1 </p>
@@ -48,9 +48,9 @@
 		</div>
 		
 		<div class="Fifth">
-			<h3> Fifth Blog Heading </h3>
-				<p> Date</p>
-				<p> Quick Synopsis </p>
+			<h3> parameter <em>vs.</em> argument </h3>
+				<p> July 29, 2017</p>
+				<p> This blog post will discuss differences between "paramter" and "argument", in methods, and when to use each. </p>
 				<p> Intro </p>
 				<p> Body 1 </p>
 				<p> Body 2 </p>
