early updates check

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 			<h3> switch <em>vs.</em> if/else </h3>
 				<p> July 29, 2017</p>
 				<p> This blog post will discuss the differences between 'switch' and 'if/else', and when to use each. </p>
-				<p> Intro </p>
-				<p> Body 1 </p>
+				<p> if/else statements are a check of boolean statements switch statements can only test based on one integer, value or String</p>
+				<p> Switch statements can prove themselves useful when your variable is an integer, character or String. If you have a known list of possible options, switch statements can check to see if the input matches any of the options quickly. The example from Exercise 24 takes user input of the month # (so any integer 1-12). It then quickly checks the list to see what its output should be based on the number of the month. The return is then a month name (specific to every number). There is a second switch that tells the computer how many days it should say the month has. This switch is able to cut out some lines of code, as multiple <strong> cases </strong> have the same number of days. </p>
 				<p> Body 2 </p>
 				<p> Conclusion </p>
 		</div>
@@ -38,9 +38,9 @@
 		</div>
 		
 		<div class="Fourth">
-			<h3> This blog post will discuss in a method declaration what is void? How is this different from a method with a return type? </h3>
+			<h3> void </h3>
 				<p> July 29, 2017</p>
-				<p> Quick Synopsis </p>
+				<p> This blog post will discuss in a method declaration what is void? How is this different from a method with a return type?  </p>
 				<p> Intro </p>
 				<p> Body 1 </p>
 				<p> Body 2 </p>
