--- a/index.html
+++ b/index.html
@@ -8,37 +8,51 @@
 	<body>
 	
 		<div class="First">
-			<h3> switch <em>vs.</em> if/else </h3>
+			<h3> switch (INCOMPLETE) <em>vs.</em> if/else </h3>
 				<p> July 29, 2017</p>
 				<p> This blog post will discuss the differences between 'switch' and 'if/else', and when to use each. </p>
 				<p> if/else statements are a check of boolean statements switch statements can only test based on one integer, value or String</p>
 				<p> Switch statements can prove themselves useful when your variable is an integer, character or String. If you have a known list of possible options, switch statements can check to see if the input matches any of the options quickly. The example from Exercise 24 takes user input of the month # (so any integer 1-12). It then quickly checks the list to see what its output should be based on the number of the month. The return is then a month name (specific to every number). There is a second switch that tells the computer how many days it should say the month has. This switch is able to cut out some lines of code, as multiple <strong> cases </strong> have the same number of days. </p>
-				<p> Body 2 </p>
-				<p> Conclusion </p>
+				<p> 'if/else' statements are most often just a series of boolean checks. They often cascade the more intricate they are. They are also a process. If your initial if proves true then the computer follows its commands and puts out information based on that test running true. If the initial if statement is false, the computer will run the first else check (assuming this isn't just a singular if/else command). If that test is true then the computer then follows the commands on what information it should present. If the first else is false the command continues checking else if commands in this fashion until it comes across a test that is true or falls in the all encompassing bucket at the end. 'else/if' commands are useful in evaluating more auspicious variables where create ranges that variables could fall into. </p>
+				<p> Switch and 'if/else' statements are both very useful. However switch can be a cleaner code and faster output when the input variable is going to be predictable and specific. 'if/else' commands are more useful in wrangling up variable inputs that could fall into a broader spectrum, we can apply ranges. 'if/else' worked well in Excercise 19, but would be excessive when trying to code. </p>
 		</div>
 		
 		<div class="Second">
-			<h3> = <em>vs.</em> == <em>vs.</em> .equals</h3>
+			<h3> Equal Equal Equal? (INCOMPLETE)</h3>
 				<p> July 29, 2017</p>
 				<p> This blog post will discuss the differences between '=', '==", and '.equals' and when to use each. </p>
-				<p> Intro </p>
-				<p> Body 1 </p>
+				<p> To start let us define each of the equals means in the code:
+					<ol>
+						<li> = :
+						</li>
+						<li> == :
+						</li>
+						<li> .equals :
+						<li>
+					 </p>
+				<p> So as you can see they each have their own purpose</p>
 				<p> Body 2 </p>
 				<p> Conclusion </p>
 		</div>
 		
 		<div class="Third">
-			<h3> import java.util.Scanner; </h3>
+			<h3> import java.util.Scanner; (INCOMPLETE </h3>
 				<p> July 29, 2017</p>
 				<p> This blog post will discuss what happens when your code has 'import java.util.Scanner;', and where does its functionality come from. Plus what is the java portion? </p>
-				<p> Intro </p>
+				<p> If we break it down by word:
+					<ol>
+						<li>import : this is used to pull from other classes</li>
+						<li>java: is the highest folder that we are trying to pull the Scanner class from</p>
+						<li>util: a folder located within the java folder, short for utilities
+						<li>Scanner: class that is predefined for user input</li>
+					<ol>
 				<p> Body 1 </p>
 				<p> Body 2 </p>
 				<p> Conclusion </p>
 		</div>
 		
 		<div class="Fourth">
-			<h3> void </h3>
+			<h3> void (INCOMPLETE) </h3>
 				<p> July 29, 2017</p>
 				<p> This blog post will discuss in a method declaration what is void? How is this different from a method with a return type?  </p>
 				<p> Intro </p>
@@ -48,7 +62,7 @@
 		</div>
 		
 		<div class="Fifth">
-			<h3> parameter <em>vs.</em> argument </h3>
+			<h3> parameter <em>vs.</em> argument (INCOMPLETE)</h3>
 				<p> July 29, 2017</p>
 				<p> This blog post will discuss differences between "paramter" and "argument", in methods, and when to use each. </p>
 				<p> Intro </p>
