adding links to indivual blog posts

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 		<h1> Erik's Skill Distillery Blog </h1>
 	</head>
 	<body>
-	
-		<div class="First">
+		<a href="#First"> switch vs. if else</a> 
+		<a href="#Second"> Equal Equal Equal?</a> 
+		<a href="#Third"> import java.util.Scanner</a> 
+		<a href="#Fourth"> void</a> 
+		<a href="#Fifth"> parameter vs. argument</a> 
+		<div ID="First">
 			<h3> switch (INCOMPLETE) <em>vs.</em> if/else </h3>
 				<p> July 29, 2017</p>
 				<p> This blog post will discuss the differences between 'switch' and 'if/else', and when to use each. </p>
@@ -17,7 +21,7 @@
 				<p> Switch and 'if/else' statements are both very useful. However switch can be a cleaner code and faster output when the input variable is going to be predictable and specific. 'if/else' commands are more useful in wrangling up variable inputs that could fall into a broader spectrum, we can apply ranges. 'if/else' worked well in Excercise 19, but would be excessive when trying to code. </p>
 		</div>
 		
-		<div class="Second">
+		<div ID="Second">
 			<h3> Equal Equal Equal? (INCOMPLETE)</h3>
 				<p> July 29, 2017</p>
 				<p> This blog post will discuss the differences between '=', '==", and '.equals' and when to use each. </p>
@@ -35,7 +39,7 @@
 				<p> Conclusion </p>
 		</div>
 		
-		<div class="Third">
+		<div ID="Third">
 			<h3> import java.util.Scanner; (INCOMPLETE </h3>
 				<p> July 29, 2017</p>
 				<p> This blog post will discuss what happens when your code has 'import java.util.Scanner;', and where does its functionality come from. Plus what is the java portion? </p>
@@ -51,7 +55,7 @@
 				<p> Conclusion </p>
 		</div>
 		
-		<div class="Fourth">
+		<div ID="Fourth">
 			<h3> void (INCOMPLETE) </h3>
 				<p> July 29, 2017</p>
 				<p> This blog post will discuss in a method declaration what is void? How is this different from a method with a return type?  </p>
@@ -61,7 +65,7 @@
 				<p> Conclusion </p>
 		</div>
 		
-		<div class="Fifth">
+		<div ID="Fifth">
 			<h3> parameter <em>vs.</em> argument (INCOMPLETE)</h3>
 				<p> July 29, 2017</p>
 				<p> This blog post will discuss differences between "paramter" and "argument", in methods, and when to use each. </p>
