adding button shapes

--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
 		<h1> Erik's Skill Distillery Blog </h1>
 	</head>
 	<body>
-		<a href="#First"> switch vs. if else</a> 
-		<a href="#Second"> Equal Equal Equal?</a> 
-		<a href="#Third"> import java.util.Scanner</a> 
-		<a href="#Fourth"> void</a> 
-		<a href="#Fifth"> parameter vs. argument</a> 
+		<div class="button">
+			<a href="#First"> switch vs. if else</a> 
+		</div>
+		<div class="button">
+			<a href="#Second"> Equal Equal Equal?</a> 
+		</div>
+		<div class="button">
+			<a href="#Third"> import java.util.Scanner</a> 
+		</div>
+		<div class="button">
+			<a href="#Fourth"> void</a> 
+		</div>
+		<div class="button">
+			<a href="#Fifth"> parameter vs. argument</a> 
+		</div>
 		<div ID="First">
 			<h3> switch (INCOMPLETE) <em>vs.</em> if/else </h3>
 				<p> July 29, 2017</p>
