adding button shapes

--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
 		<h1> Erik's Skill Distillery Blog </h1>
 	</head>
 	<body>
-		<div class="button">
-			<a href="#First"> switch vs. if else</a> 
+		<div class="button"><a href="#First"> switch vs. if else</a> 
 		</div>
-		<div class="button">
-			<a href="#Second"> Equal Equal Equal?</a> 
+		<div class="button"><a href="#Second"> Equal Equal Equal?</a> 
 		</div>
-		<div class="button">
-			<a href="#Third"> import java.util.Scanner</a> 
+		<div class="button"><a href="#Third"> import java.util.Scanner</a> 
 		</div>
-		<div class="button">
-			<a href="#Fourth"> void</a> 
+		<div class="button"><a href="#Fourth"> void</a> 
 		</div>
 		<div class="button">
 			<a href="#Fifth"> parameter vs. argument</a> 
