trying to align buttons

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 		<h1> Erik's Skill Distillery Blog </h1>
 	</head>
 	<body>
-		<div class="button"><a href="#First"> switch vs. if else</a> 
+		<div ID="Button"><a href="#First"> switch vs. if else</a> 
 		</div>
-		<div class="button"><a href="#Second"> Equal Equal Equal?</a> 
+		<div ID="Button"><a href="#Second"> Equal Equal Equal?</a> 
 		</div>
-		<div class="button"><a href="#Third"> import java.util.Scanner</a> 
+		<div ID="Button"><a href="#Third"> import java.util.Scanner</a> 
 		</div>
-		<div class="button"><a href="#Fourth"> void</a> 
+		<div ID="button"><a href="#Fourth"> void</a> 
 		</div>
-		<div class="button">
+		<div ID="button">
 			<a href="#Fifth"> parameter vs. argument</a> 
 		</div>
 		<div ID="First">
