stylesheet update test

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 		</div>
 		<div ID="Button"><a href="#Third"> import java.util.Scanner</a> 
 		</div>
-		<div ID="button"><a href="#Fourth"> void</a> 
+		<div ID="Button"><a href="#Fourth"> void</a> 
 		</div>
-		<div ID="button">
-			<a href="#Fifth"> parameter vs. argument</a> 
+		<div ID="Button"><a href="#Fifth"> parameter vs. argument</a> 
 		</div>
 		<div ID="First">
 			<h3> switch (INCOMPLETE) <em>vs.</em> if/else </h3>
