--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 				<p> This blog post will discuss the differences between '=', '==", and '.equals' and when to use each. </p>
 				<p> To start let us define each of the equals means in the code:
 					<ol>
-						<li> = :
+						<li> = : used to define and initialize variables. <em>x = 5</em> gives the variable x the value of 5
 						</li>
-						<li> == :
+						<li> == : used in boolean expressions to test if a double or integer are equal to each other
 						</li>
-						<li> .equals :
+						<li> .equals : used in boolean expressions to test if strings are equal to each other
 						<li>
-					 </p>
-				<p> So as you can see they each have their own purpose</p>
+				</p>
+				<p> So as you can see they each have their own purpose. = by itself is used throughout code, defining variables, it is not used to test anything. == is used to test whether numbers are equal to each other. .equals is used to test if strings are equal to each other. If you tried to test if a string was == to a word input from a user, it would not compile. .equals has to be used as the tester for strings. </p>
 				<p> Body 2 </p>
 				<p> Conclusion </p>
 		</div>
@@ -63,11 +63,11 @@
 		<div ID="Fourth">
 			<h3> void (INCOMPLETE) </h3>
 				<p> July 29, 2017</p>
-				<p> This blog post will discuss in a method declaration what is void? How is this different from a method with a return type?  </p>
-				<p> Intro </p>
-				<p> Body 1 </p>
-				<p> Body 2 </p>
-				<p> Conclusion </p>
+				<p> This blog post will discuss in method declaration what is void? How is this different from a method with a return type?  </p>
+				<p> In order to discuss what void is in method declaration we should first define a method. A method is a chunk of code that can be called on to be executed by name. Essentially a method and can run and perform so bit of code, it can either produce feedback of some sort or it can simply complete a task.  </p>
+				<p> This is where <strong>void</strong> comes in. Void is simply put in place of the word that would define the variable being returned. In the case of void the method will be added, but no data will be brought back. </p>
+				<p> In its place you can put:</p>
+				<p> Conclusion </p> 
 		</div>
 		
 		<div ID="Fifth">
