--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<h1> Erik's Skill Distillery Blog </h1>
 	</head>
 	<body>
-		<button ID="1st"><a href="#First"> switch vs. if else</a> 
-		</button>
-		<button ID="2nd"><a href="#Second"> Equal Equal Equal?</a> 
-		</button> 
-		<button ID="3rd"><a href="#Third"> import java.util.Scanner</a> 
-		</button>   
-		<button ID="4th"><a href="#Fourth"> void</a> 
-		</button>
-		<button ID="5th"><a href="#Fifth"> parameter vs. argument</a> 
-		</button>  
+		<div ID="button" class="1st"><a href="#First"> switch vs. if else</a> 
+		</div>
+		<div ID="button" class="2nd"><a href="#Second"> Equal Equal Equal?</a> 
+		</div> 
+		<div ID="button" class="3rd"><a href="#Third"> import java.util.Scanner</a> 
+		</div>   
+		<div ID="button" class="4th"><a href="#Fourth"> void</a> 
+		</div>
+		<div ID="button" class="5th"><a href="#Fifth"> parameter vs. argument</a> 
+		</div>  
 		<div ID="First">  
 			<h3> switch (INCOMPLETE) <em>vs.</em> if/else </h3>
 				<p> July 29, 2017</p>
