--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 		<h1> Erik's Skill Distillery Blog </h1>
 	</head>
 	<body>
-		<div ID="button" class="1st"><a href="#First"> switch vs. if else</a> 
+		<div ID="button1"><a href="#First"> switch vs. if else</a> 
 		</div>
-		<div ID="button" class="2nd"><a href="#Second"> Equal Equal Equal?</a> 
+		<div ID="button2""><a href="#Second"> Equal Equal Equal?</a> 
 		</div> 
-		<div ID="button" class="3rd"><a href="#Third"> import java.util.Scanner</a> 
+		<div ID="button3"><a href="#Third"> import java.util.Scanner</a> 
 		</div>    
-		<div ID="button" class="4th"><a href="#Fourth"> void</a> 
+		<div ID="button4"><a href="#Fourth"> void</a> 
 		</div>
-		<div ID="button" class="5th"><a href="#Fifth"> parameter vs. argument</a> 
+		<div ID="button5"><a href="#Fifth"> parameter vs. argument</a> 
 		</div>  
 		<div ID="First">  
 			<h3> switch (INCOMPLETE) <em>vs.</em> if/else </h3>
