--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<h1> Erik's Skill Distillery Blog </h1>
 	</head>
 	<body>
-		<div ID="button1"><a href="#First"> switch vs. if else</a> 
+		<div ID="button"><a href="#First"> switch vs. if else</a> 
+		
+		<a href="#Second"> Equal Equal Equal?</a> 
+		
+		<a href="#Third"> import java.util.Scanner</a> 
+		   
+		<a href="#Fourth"> void</a> 
+		
+		<a href="#Fifth"> parameter vs. argument</a> 
 		</div>
-		<div ID="button2""><a href="#Second"> Equal Equal Equal?</a> 
-		</div> 
-		<div ID="button3"><a href="#Third"> import java.util.Scanner</a> 
-		</div>    
-		<div ID="button4"><a href="#Fourth"> void</a> 
-		</div>
-		<div ID="button5"><a href="#Fifth"> parameter vs. argument</a> 
-		</div>  
 		<div ID="First">  
 			<h3> switch (INCOMPLETE) <em>vs.</em> if/else </h3>
 				<p> July 29, 2017</p>
