--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 		<title> Erik's Skill Distillery Blog </title>
 		<h1> Erik's Skill Distillery Blog </h1>
 	</head>
-	<body> 
-		<div ID="button" class="1st"><a href="#First"> switch vs. if else</a> 
+	<body>
+		<div ID="Button"><a href="#First"> switch vs. if else</a> 
 		</div>
-		<div ID="button" class="2nd"><a href="#Second"> Equal Equal Equal?</a> 
+		<div ID="Button"><a href="#Second"> Equal Equal Equal?</a> 
 		</div> 
-		<div ID="button"><a href="#Third"> import java.util.Scanner</a> 
-		</div>   
-		<div ID="button"><a href="#Fourth"> void</a> 
-		</div>
-		<div ID="button"><a href="#Fifth"> parameter vs. argument</a> 
+		<div ID="Button"><a href="#Third"> import java.util.Scanner</a> 
 		</div>  
-		<div ID="First">  
+		<div ID="Button"><a href="#Fourth"> void</a> 
+		</div>
+		<div ID="Button"><a href="#Fifth"> parameter vs. argument</a> 
+		</div>  
+		<div ID="First">
 			<h3> switch (INCOMPLETE) <em>vs.</em> if/else </h3>
 				<p> July 29, 2017</p>
 				<p> This blog post will discuss the differences between 'switch' and 'if/else', and when to use each. </p>
