--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 		<title> Erik's Skill Distillery Blog </title>
-		<h1> Erik's Skill Distillery Blog </h1>
+		<h1> Erik's Skill Distilelery Blog </h1>
 	</head> 
 	<body>
-		<div ID="Button"><a href="#First"> switch vs. if else</a> 
-		</div>  
-		<div ID="Button"><a href="#Second"> Equal Equal Equal?</a> 
-		</div> 
-		<div ID="Button"><a href="#Third"> import java.util.Scanner</a> 
-		</div>  
-		<div ID="Button"><a href="#Fourth"> void</a> 
-		</div>
-		<div ID="Button"><a href="#Fifth"> parameter vs. argument</a> 
+		<div ID="Button"><a href="#First"> switch vs. if else</a>  
+			<div ID="Button"><a href="#Second"> Equal Equal Equal?</a> 
+				<div ID="Button"><a href="#Third"> import java.util.Scanner</a>  
+					<div ID="Button"><a href="#Fourth"> void</a> 
+						<div ID="Button"><a href="#Fifth"> parameter vs. argument</a> 
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>  
 		<div ID="First">
 			<h3> switch (INCOMPLETE) <em>vs.</em> if/else </h3>
