--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 		<title> Erik's Skill Distillery Blog </title>
-		<h1> Erik's Skill Distillery Blog </h1>
+		<h1> Erik's Skill Distillery Bloog </h1>
 	</head>  
 	<body>
 		<div ID="Button"><a href="#First"> switch vs. if else</a>  
