--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<ol>
 						<li>import : this is used to pull from other classes</li>
 						<li>java: is the highest folder that we are trying to pull the Scanner class from</li>
-						<li>util: a folder located within the java folder, short for utilities
+						<li>util: a folder located within the java folder, short for utilities </li>
 						<li>Scanner: class that is predefined for user input</li>
 					<ol>
 				</p>
@@ -77,8 +77,9 @@
 				<p> July 29, 2017</p>
 				<p> This blog post will discuss differences between "paramter" and "argument", in methods, and when to use each. </p>
 				<p> <ul> 
-					<li> argument is the variable's value in a function </li>
-					<li> parameter is a variable as its declared in the function </li>
+						<li> argument is the variable's value in a function </li>
+						<li> parameter is a variable as its declared in the function </li>
+					</ul>
 				</p>
 				<p> So the parameter is how to find the variable's value to be inserted into a function. Argument is whatever that value ends up actually being.  </p>
 				<p> In exercise 35 line 14 is showDice(r1); r1 would be the parameter. Once we know the value of r1, say its 3, 3 is the actual argument used in the function showDice. </p>
